k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventflow-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 5001
          - path: /bookings
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 5002
          - path: /notify
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 5003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
